update resource strings

--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -761,11 +761,11 @@
     <comment>The prerequisite the user needs to use GitHub Copilot within Terminal.</comment>
   </data>
   <data name="AISettings_GithubCopilotSignUpAndLearnMore" xml:space="preserve">
-    <value>Sign up for a {0} today or request GitHub Copilot access from your enterprise admin. You can read more about GitHub Copilot offerings at {1}.</value>
+    <value>Sign up for {0} today or request GitHub Copilot access from your enterprise admin. You can read more about GitHub Copilot offerings at {1}.</value>
     <comment>{Locked="{0}"}{Locked="{1}"} Information regarding how the user can learn more about GitHub Copilot and sign up for it. {0} will be replaced by AISettings_GithubCopilotSignUpLinkText and {1} will be replaced by AISettings_GithubCopilotLearnMoreLinkText.</comment>
   </data>
   <data name="AISettings_GithubCopilotSignUpLinkText" xml:space="preserve">
-    <value>30-day GitHub Copilot free trial</value>
+    <value>GitHub Copilot Free</value>
     <comment>The text of the hyperlink that directs the user to sign up for GitHub Copilot.</comment>
   </data>
   <data name="AISettings_GithubCopilotLearnMoreLinkText" xml:space="preserve">
