Replace New Tab Menu Match Profiles functionality with regex support

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -944,4 +944,7 @@
   <data name="TabMoveRight" xml:space="preserve">
     <value>Move right</value>
   </data>
+  <data name="InvalidRegex" xml:space="preserve">
+    <value>An invalid regex was found.</value>
+  </data>
 </root>
