--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -464,6 +464,9 @@
   <data name="CmdSavedLayoutArgDesc" xml:space="preserve">
     <value>This parameter is an internal implementation detail and should not be used.</value>
   </data>
+  <data name="CmdLocalStateArgDesc" xml:space="preserve">
+    <value>Local State folder path.</value>
+  </data>
   <data name="CmdWindowTargetArgDesc" xml:space="preserve">
     <value>Specify a terminal window to run the given commandline in. "0" always refers to the current window. </value>
   </data>
