--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1820,6 +1820,14 @@
     <value>Are you sure you want to delete this key binding?</value>
     <comment>Confirmation message displayed when the user attempts to delete a key binding entry.</comment>
   </data>
+  <data name="Actions_CommandDeleteConfirmationButton.Content" xml:space="preserve">
+    <value>Yes, delete action</value>
+    <comment>Button label that confirms deletion of an action.</comment>
+  </data>
+  <data name="Actions_CommandDeleteConfirmationMessage.Text" xml:space="preserve">
+    <value>Are you sure you want to delete this action?</value>
+    <comment>Confirmation message displayed when the user attempts to delete an action.</comment>
+  </data>
   <data name="Actions_InvalidKeyChordMessage" xml:space="preserve">
     <value>Invalid key chord. Please enter a valid key chord.</value>
     <comment>Error message displayed when an invalid key chord is input by the user.</comment>
