--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -945,6 +945,6 @@
     <value>Move right</value>
   </data>
   <data name="InvalidRegex" xml:space="preserve">
-    <value>An invalid regex was found.</value>
+    <value>An invalid regular expression was found.</value>
   </data>
 </root>
