--- a/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsModel/Resources/en-US/Resources.resw
@@ -741,274 +741,274 @@
     <value>Open current working directory</value>
   </data>
   <data name="CopyText" xml:space="preserve">
-    <value>Copy Text</value>
+    <value>Copy text</value>
   </data>
   <data name="PasteText" xml:space="preserve">
-    <value>Paste Text</value>
+    <value>Paste text</value>
   </data>
   <data name="OpenNewTabDropdown" xml:space="preserve">
-    <value>Open New Tab Dropdown</value>
+    <value>Open new tab dropdown</value>
   </data>
   <data name="DuplicateTab" xml:space="preserve">
-    <value>Duplicate Tab</value>
+    <value>Duplicate tab</value>
   </data>
   <data name="NewTab" xml:space="preserve">
-    <value>New Tab</value>
+    <value>New tab</value>
   </data>
   <data name="CloseWindow" xml:space="preserve">
-    <value>Close Window</value>
+    <value>Close window</value>
   </data>
   <data name="CloseTab" xml:space="preserve">
-    <value>Close Tab</value>
+    <value>Close tab</value>
   </data>
   <data name="ClosePane" xml:space="preserve">
-    <value>Close Pane</value>
+    <value>Close pane</value>
   </data>
   <data name="NextTab" xml:space="preserve">
-    <value>Next Tab</value>
+    <value>Next tab</value>
   </data>
   <data name="PrevTab" xml:space="preserve">
-    <value>Previous Tab</value>
+    <value>Previous tab</value>
   </data>
   <data name="SendInput" xml:space="preserve">
-    <value>Send Input</value>
+    <value>Send input</value>
   </data>
   <data name="SplitPane" xml:space="preserve">
-    <value>Split Pane</value>
+    <value>Split pane</value>
   </data>
   <data name="ToggleSplitOrientation" xml:space="preserve">
-    <value>Toggle Split Orientation</value>
+    <value>Toggle split orientation</value>
   </data>
   <data name="TogglePaneZoom" xml:space="preserve">
-    <value>Toggle Pane Zoom</value>
+    <value>Toggle pane zoom</value>
   </data>
   <data name="SwitchToTab" xml:space="preserve">
-    <value>Switch To Tab</value>
+    <value>Switch to tab</value>
   </data>
   <data name="AdjustFontSize" xml:space="preserve">
-    <value>Adjust Font Size</value>
+    <value>Adjust font size</value>
   </data>
   <data name="ResetFontSize" xml:space="preserve">
-    <value>Reset Font Size</value>
+    <value>Reset font size</value>
   </data>
   <data name="ScrollUp" xml:space="preserve">
-    <value>Scroll Up</value>
+    <value>Scroll up</value>
   </data>
   <data name="ScrollDown" xml:space="preserve">
-    <value>Scroll Down</value>
+    <value>Scroll down</value>
   </data>
   <data name="ScrollUpPage" xml:space="preserve">
-    <value>Scroll Up Page</value>
+    <value>Scroll up page</value>
   </data>
   <data name="ScrollDownPage" xml:space="preserve">
-    <value>Scroll Down Page</value>
+    <value>Scroll down page</value>
   </data>
   <data name="ScrollToTop" xml:space="preserve">
-    <value>Scroll To Top</value>
+    <value>Scroll to top</value>
   </data>
   <data name="ScrollToBottom" xml:space="preserve">
-    <value>Scroll To Bottom</value>
+    <value>Scroll to bottom</value>
   </data>
   <data name="ScrollToMark" xml:space="preserve">
-    <value>Scroll To Mark</value>
+    <value>Scroll to mark</value>
   </data>
   <data name="AddMark" xml:space="preserve">
-    <value>Add Mark</value>
+    <value>Add mark</value>
   </data>
   <data name="ClearMark" xml:space="preserve">
-    <value>Clear Mark</value>
+    <value>Clear mark</value>
   </data>
   <data name="ClearAllMarks" xml:space="preserve">
-    <value>Clear All Marks</value>
+    <value>Clear all marks</value>
   </data>
   <data name="ResizePane" xml:space="preserve">
-    <value>Resize Pane</value>
+    <value>Resize pane</value>
   </data>
   <data name="MoveFocus" xml:space="preserve">
-    <value>Move Focus</value>
+    <value>Move focus</value>
   </data>
   <data name="MovePane" xml:space="preserve">
-    <value>Move Pane</value>
+    <value>Move pane</value>
   </data>
   <data name="SwapPane" xml:space="preserve">
-    <value>Swap Pane</value>
+    <value>Swap pane</value>
   </data>
   <data name="Find" xml:space="preserve">
     <value>Find</value>
   </data>
   <data name="ToggleShaderEffects" xml:space="preserve">
-    <value>Toggle Shader Effects</value>
+    <value>Toggle shader effects</value>
   </data>
   <data name="ToggleFocusMode" xml:space="preserve">
-    <value>Toggle Focus Mode</value>
+    <value>Toggle focus mode</value>
   </data>
   <data name="ToggleFullscreen" xml:space="preserve">
-    <value>Toggle Fullscreen</value>
+    <value>Toggle fullscreen</value>
   </data>
   <data name="ToggleAlwaysOnTop" xml:space="preserve">
-    <value>Toggle Always On Top</value>
+    <value>Toggle always on top</value>
   </data>
   <data name="OpenSettings" xml:space="preserve">
-    <value>Open Settings</value>
+    <value>Open settings</value>
   </data>
   <data name="SetFocusMode" xml:space="preserve">
-    <value>Set Focus Mode</value>
+    <value>Set focus mode</value>
   </data>
   <data name="SetFullScreen" xml:space="preserve">
-    <value>Set Full Screen</value>
+    <value>Set full screen</value>
   </data>
   <data name="SetMaximized" xml:space="preserve">
-    <value>Set Maximized</value>
+    <value>Set maximized</value>
   </data>
   <data name="SetColorScheme" xml:space="preserve">
-    <value>Set Color Scheme</value>
+    <value>Set color scheme</value>
   </data>
   <data name="SetTabColor" xml:space="preserve">
-    <value>Set Tab Color</value>
+    <value>Set tab color</value>
   </data>
   <data name="OpenTabColorPicker" xml:space="preserve">
-    <value>Open Tab Color Picker</value>
+    <value>Open tab color picker</value>
   </data>
   <data name="RenameTab" xml:space="preserve">
-    <value>Rename Tab</value>
+    <value>Rename tab</value>
   </data>
   <data name="OpenTabRenamer" xml:space="preserve">
-    <value>Open Tab Renamer</value>
+    <value>Open tab renamer</value>
   </data>
   <data name="ExecuteCommandline" xml:space="preserve">
-    <value>Execute Command Line</value>
+    <value>Execute command line</value>
   </data>
   <data name="ToggleCommandPalette" xml:space="preserve">
-    <value>Toggle Command Palette</value>
+    <value>Toggle command palette</value>
   </data>
   <data name="CloseOtherTabs" xml:space="preserve">
-    <value>Close Other Tabs</value>
+    <value>Close other tabs</value>
   </data>
   <data name="CloseTabsAfter" xml:space="preserve">
-    <value>Close Tabs After</value>
+    <value>Close tabs after</value>
   </data>
   <data name="TabSearch" xml:space="preserve">
-    <value>Tab Search</value>
+    <value>Tab search</value>
   </data>
   <data name="MoveTab" xml:space="preserve">
-    <value>Move Tab</value>
+    <value>Move tab</value>
   </data>
   <data name="BreakIntoDebugger" xml:space="preserve">
-    <value>Break Into Debugger</value>
+    <value>Break into debugger</value>
   </data>
   <data name="TogglePaneReadOnly" xml:space="preserve">
-    <value>Toggle Pane Read-Only</value>
+    <value>Toggle pane read-only</value>
   </data>
   <data name="EnablePaneReadOnly" xml:space="preserve">
-    <value>Enable Pane Read-Only</value>
+    <value>Enable pane read-only</value>
   </data>
   <data name="DisablePaneReadOnly" xml:space="preserve">
-    <value>Disable Pane Read-Only</value>
+    <value>Disable pane read-only</value>
   </data>
   <data name="FindMatch" xml:space="preserve">
-    <value>Find Match</value>
+    <value>Find match</value>
   </data>
   <data name="NewWindow" xml:space="preserve">
-    <value>New Window</value>
+    <value>New window</value>
   </data>
   <data name="IdentifyWindow" xml:space="preserve">
-    <value>Identify Window</value>
+    <value>Identify window</value>
   </data>
   <data name="IdentifyWindows" xml:space="preserve">
-    <value>Identify Windows</value>
+    <value>Identify windows</value>
   </data>
   <data name="RenameWindow" xml:space="preserve">
-    <value>Rename Window</value>
+    <value>Rename window</value>
   </data>
   <data name="OpenWindowRenamer" xml:space="preserve">
-    <value>Open Window Renamer</value>
+    <value>Open window renamer</value>
   </data>
   <data name="DisplayWorkingDirectory" xml:space="preserve">
-    <value>Display Working Directory</value>
+    <value>Display working directory</value>
   </data>
   <data name="SearchForText" xml:space="preserve">
-    <value>Search For Text</value>
+    <value>Search for text</value>
   </data>
   <data name="GlobalSummon" xml:space="preserve">
-    <value>Global Summon</value>
+    <value>Global summon</value>
   </data>
   <data name="QuakeMode" xml:space="preserve">
-    <value>Quake Mode</value>
+    <value>Quake mode</value>
   </data>
   <data name="FocusPane" xml:space="preserve">
-    <value>Focus Pane</value>
+    <value>Focus pane</value>
   </data>
   <data name="OpenSystemMenu" xml:space="preserve">
-    <value>Open System Menu</value>
+    <value>Open system menu</value>
   </data>
   <data name="ExportBuffer" xml:space="preserve">
-    <value>Export Buffer</value>
+    <value>Export buffer</value>
   </data>
   <data name="ClearBuffer" xml:space="preserve">
-    <value>Clear Buffer</value>
+    <value>Clear buffer</value>
   </data>
   <data name="MultipleActions" xml:space="preserve">
-    <value>Multiple Actions</value>
+    <value>Multiple actions</value>
   </data>
   <data name="Quit" xml:space="preserve">
     <value>Quit</value>
   </data>
   <data name="AdjustOpacity" xml:space="preserve">
-    <value>Adjust Opacity</value>
+    <value>Adjust opacity</value>
   </data>
   <data name="RestoreLastClosed" xml:space="preserve">
-    <value>Restore Last Closed</value>
+    <value>Restore last closed</value>
   </data>
   <data name="SelectAll" xml:space="preserve">
-    <value>Select All</value>
+    <value>Select all</value>
   </data>
   <data name="SelectCommand" xml:space="preserve">
-    <value>Select Command</value>
+    <value>Select command</value>
   </data>
   <data name="SelectOutput" xml:space="preserve">
-    <value>Select Output</value>
+    <value>Select output</value>
   </data>
   <data name="MarkMode" xml:space="preserve">
-    <value>Mark Mode</value>
+    <value>Mark mode</value>
   </data>
   <data name="ToggleBlockSelection" xml:space="preserve">
-    <value>Toggle Block Selection</value>
+    <value>Toggle block selection</value>
   </data>
   <data name="SwitchSelectionEndpoint" xml:space="preserve">
-    <value>Switch Selection Endpoint</value>
+    <value>Switch selection endpoint</value>
   </data>
   <data name="Suggestions" xml:space="preserve">
     <value>Suggestions</value>
   </data>
   <data name="ColorSelection" xml:space="preserve">
-    <value>Color Selection</value>
+    <value>Color selection</value>
   </data>
   <data name="ShowContextMenu" xml:space="preserve">
-    <value>Show Context Menu</value>
+    <value>Show context menu</value>
   </data>
   <data name="ExpandSelectionToWord" xml:space="preserve">
-    <value>Expand Selection To Word</value>
+    <value>Expand selection to word</value>
   </data>
   <data name="CloseOtherPanes" xml:space="preserve">
-    <value>Close Other Panes</value>
+    <value>Close other panes</value>
   </data>
   <data name="RestartConnection" xml:space="preserve">
-    <value>Restart Connection</value>
+    <value>Restart connection</value>
   </data>
   <data name="ToggleBroadcastInput" xml:space="preserve">
-    <value>Toggle Broadcast Input</value>
+    <value>Toggle broadcast input</value>
   </data>
   <data name="OpenScratchpad" xml:space="preserve">
-    <value>Open Scratchpad</value>
+    <value>Open scratchpad</value>
   </data>
   <data name="OpenAbout" xml:space="preserve">
-    <value>Open About</value>
+    <value>Open about</value>
   </data>
   <data name="QuickFix" xml:space="preserve">
-    <value>Quick Fix</value>
+    <value>Quick fix</value>
   </data>
   <data name="OpenCWD" xml:space="preserve">
-    <value>Open Current Working Directory</value>
+    <value>Open current working directory</value>
   </data>
   <data name="WslDistroGeneratorDisplayName" xml:space="preserve">
     <value>WSL Distribution Profile Generator</value>
