--- a/src/cascadia/TerminalSettingsEditor/Resources/en-GB/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-GB/Resources.resw
@@ -360,7 +360,7 @@
     <comment>{Locked="WARP"} WARP is the "Windows Advanced Rasterization Platform". This text is shown next to a toggle.</comment>
   </data>
   <data name="Globals_SoftwareRendering.HelpText" xml:space="preserve">
-    <value>When enabled, the terminal will use a software rasteriser (WARP). This setting should be left disabled under almost all circumstances.</value>
+    <value>When enabled, the terminal will use a software rasterizer (WARP). This setting should be left disabled under almost all circumstances.</value>
     <comment>{Locked="WARP"} WARP is the "Windows Advanced Rasterization Platform".</comment>
   </data>
   <data name="Globals_TextMeasurement.Header" xml:space="preserve">
