--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1737,7 +1737,7 @@
     <comment>Header for a control to toggle the "focus follow mouse" setting. When enabled, hovering over a pane puts it in focus.</comment>
   </data>
   <data name="Globals_ScrollToZoom.Header" xml:space="preserve">
-    <value>Disable zooming with Ctrl+mouse wheel</value>
+    <value>Change font size with ctrl + mouse wheel</value>
     <comment>Header for a control to toggle disabling mouse zoom. When enabled, Ctrl+mouse wheel will not change the font size.</comment>
   </data>
   <data name="Globals_DisableAnimationsReversed.Header" xml:space="preserve">
