--- a/src/cascadia/TerminalSettingsEditor/Resources/ja-JP/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/ja-JP/Resources.resw
@@ -368,10 +368,13 @@
     <comment>This text is shown next to a list of choices.</comment>
   </data>
   <data name="Globals_TextMeasurement.HelpText" xml:space="preserve">
-    <value>入力したテキストをセルにグループ化する方法を変更します。"Grapheme clusters" オプションは最も新しく Unicode で正しい方法ですが、UNIX では "wcswidth" は一般的な方法であり、"Windows コンソール" は Windows での動作方法をレプリケートします。この設定を変更するには、Windows ターミナルの再起動が必要です。この設定は、その中から起動されたアプリケーションにのみ適用されます。</value>
-  </data>
+  <value>
+    入力したテキストをセルにグループ化する方法を変更します。"書記素クラスター" オプションは最も新しく Unicode で正しい方法ですが、UNIX では "wcswidth" は一般的な方法であり、Windows コンソール" は Windows での動作方法をレプリケートします。この設定を変更するには、Windows ターミナルの再起動が必要です。この設定は、その中から起動されたアプリケーションにのみ適用されます。
+  </value>
+</data>
+
   <data name="Globals_TextMeasurement_Graphemes.Text" xml:space="preserve">
-    <value>Grapheme クラスター</value>
+    <value>書記素クラスター</value>
     <comment>The default choice between multiple graphics APIs.</comment>
   </data>
   <data name="Globals_TextMeasurement_Wcswidth.Text" xml:space="preserve">
